@@ -10,7 +10,7 @@ import waflib.extras.autowaf as autowaf
 # major increment <=> incompatible changes
 # minor increment <=> compatible changes (additions)
 # micro increment <=> no interface changes
-SORD_VERSION       = '0.12.3'
+SORD_VERSION       = '0.13.0'
 SORD_MAJOR_VERSION = '0'
 
 # Mandatory waf variables
